// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Progress (snapshot) renders 0% (indicator translated -100%) 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
  data-max="100"
  data-state="indeterminate"
  role="progressbar"
>
  <div
    class="size-full flex-1 bg-primary transition-all"
    data-max="100"
    data-state="indeterminate"
    style="transform: translateX(-100%);"
  />
</div>
`;

exports[`Progress (snapshot) renders 50% (indicator translated -50%) 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
  data-max="100"
  data-state="indeterminate"
  role="progressbar"
>
  <div
    class="size-full flex-1 bg-primary transition-all"
    data-max="100"
    data-state="indeterminate"
    style="transform: translateX(-50%);"
  />
</div>
`;

exports[`Progress (snapshot) renders 100% (indicator translated 0%) 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
  data-max="100"
  data-state="indeterminate"
  role="progressbar"
>
  <div
    class="size-full flex-1 bg-primary transition-all"
    data-max="100"
    data-state="indeterminate"
    style="transform: translateX(-0%);"
  />
</div>
`;
